k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dnd-game
  labels:
    name: dnd-game
    app.kubernetes.io/name: dnd-game
    app.kubernetes.io/part-of: dnd-game
